Atualização da pagina inicial e novas paginas de pesquisa

--- a/public/inicial.html
+++ b/public/inicial.html
@@ -28,6 +28,20 @@
             <p>Crie um treinador para gerenciar uma equipe de Pokémon personalizada.</p>
             <a href="criarTreinador.html" class="button">Ir para Criar Treinador</a>
         </div>
+
+        <div class="card">
+            <img src="images/pokedex.jpg" alt="Lista Icone">
+            <h2>Ver Pokédex</h2>
+            <p>Veja a lista de todos os Pokémons existentes.</p>
+            <a href="listaPokemon.html" class="button">Ir para Pokédex</a>
+        </div>
+
+        <div class="card">
+            <img src="images/lupa.jpg" alt="Lupa Icone">
+            <h2>Pesquisar Pokémons</h2>
+            <p>Pesquise qualquer Pokémon!.</p>
+            <a href="pesquisar.html" class="button">Ir para Pesquisa</a>
+        </div>
     </main>
 
     <footer>
