Novos botoes para retornar a tela inicial

--- a/public/listaPokemon.html
+++ b/public/listaPokemon.html
@@ -17,6 +17,8 @@
         </div>
     </div>
 
+    <a href="inicial.html" class="button">Ir para Página Inicial</a>
+
     <script src="./scripts/listaPokemon.js"></script>
 </body>
 </html>
