--- a/public/pesquisar.html
+++ b/public/pesquisar.html
@@ -16,6 +16,8 @@
         <div id="pokemonResult" class="pokemon-result"></div>
     </div>
 
+    <a href="inicial.html" class="button">Ir para Página Inicial</a>
+
     <script src="./scripts/pesquisar.js"></script>
 </body>
 </html>
